调整返回类型